# fullstack-template

./: README.md
backend/: .env.dev  .env.prod  pyproject.toml
backend/src/: conf.py  main.py  middleware.py  routes.py  websocket_connection_manager.py  ws.py
backend/src/auth/: router.py  schema.py  service.py
backend/src/base/: service.py
backend/src/extensions/: __init__.py  database.py  redis.py
backend/src/libs/: event.py  passport.py  twitter_crawer.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 3f89e5cd53c3_permissions.py  4f183e83c98f_permissions.py  61bd7a80d45c_init.py  8ce4f7af3a98_permissions.py  b2d464b93072_permissions.py  c39aa09fc283_user_role.py  f4a78c41ade8_permissions.py
backend/src/models/: __init__.py  base.py  data.py  llm.py  menu.py  permission.py  role.py  user.py
backend/src/permissions/: router.py  schema.py  service.py
backend/src/role/: router.py  schema.py  service.py
backend/src/twitter/: router.py  schema.py  service.py
backend/src/user/: router.py  service.py  shema.py
frontend/: .env.development  .env.production  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json  window_dump.xml
frontend/src/: App.tsx  env.d.ts  index.tsx  service.ts  theme.config.ts
frontend/src/api/: auth.ts  current.ts  permission.ts  role.ts  user.ts
frontend/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
frontend/src/routes/: index.ts  router.tsx  routes.ts  routes.tsx  utils.tsx
frontend/src/stores/: useGlobalStore.ts
frontend/src/utils/: request.ts
(+18 files in other folders)
